--- a/home.html
+++ b/home.html
@@ -565,7 +565,7 @@
                         </div>
 
                     </div>
-                    <div class="col-lg-6 d-none d-lg-block mt-7p p-0 ">
+                    <div class="col-lg-6 d-none d-lg-flex align-items-lg-center p-0 ">
                         <img src="assets/images/home/banner-laptop.png " width="100% " alt=" ">
                     </div>
                 </div>
@@ -851,11 +851,11 @@
                     </div>
                 </div>
             </div>
-            <div class="row feedbacks-bottom ">
-                <div class="container ">
+            <div class="container feedbacks-bottom swiper position-relative">
+                <div class=" swiper-wrapper">
 
-                    <div class="col-12 py-64-desktop py-3 row feedbacks-bottom-item ">
-                        <div class="col-3 avt-client ">
+                    <div class="py-64-desktop p-3 row feedbacks-bottom-item swiper-slide mr-0">
+                        <div class="col-3 avt-client pe-2">
                             <img src="./assets/images/home/users.png " alt=" ">
                         </div>
                         <div class="col-9 content-client ">
@@ -865,8 +865,8 @@
                             <span class="name mt-30 font-20-desktop font-15 text-darkBlue fw-600 ">Angela J </span>
                         </div>
                     </div>
-                    <div class="col-12 py-64-desktop py-3 row feedbacks-bottom-item ">
-                        <div class="col-3 avt-client ">
+                    <div class=" py-64-desktop p-3 row feedbacks-bottom-item swiper-slide mr-0">
+                        <div class="col-3 avt-client pe-2">
                             <img src="./assets/images/home/users.png " alt=" ">
                         </div>
                         <div class="col-9 content-client ">
@@ -876,18 +876,19 @@
                             <span class="name mt-30 font-20-desktop font-15 text-darkBlue fw-600 ">Angela J </span>
                         </div>
                     </div>
-                    <div class="col-12 py-64-desktop py-3 row feedbacks-bottom-item ">
-                        <div class="col-3 avt-client ">
+                    <div class=" py-64-desktop p-3 row feedbacks-bottom-item swiper-slide mr-0">
+                        <div class="col-3 avt-client pe-2">
                             <img src="./assets/images/home/users.png " alt=" ">
                         </div>
                         <div class="col-9 content-client ">
                             <h1 class="font-32-desktop font-20 text-uppercase text-darkBlue fw-900 ">Khách hàng nói về Naipot</h1>
                             <img class="mt-lg-5 mt-3 " src="./assets/images/icons/icon-pre.png " alt=" ">
                             <p class="mt-lg-5 mt-3 font-20-desktop font-15 text-darkBlue ">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad diam nonummy nibh.</p>
-                            <span class="name mt-30 font-20-desktop font-15 text-darkBlue fw-600 ">Angela J </span>
+                            <span class="name mt-30 font-20-desktop font-15 text-darkBlue fw-600 ">Angela J</span>
                         </div>
                     </div>
                 </div>
+                 <div class="swiper-pagination"></div>
             </div>
 
         </section>
@@ -1080,7 +1081,7 @@
                 </div>
             </div>
         </section>
-        <section class="register py-64 ">
+        <section class="register py-64 pb-lg-5 pb-0 ">
             <div class="container ">
                 <div class=" register-header ">
                     <div class="partners-header-title ">
@@ -1094,39 +1095,39 @@
                 </div>
                 <div class="register-content mt-57 ">
                     <div class="row form-register ">
-                        <div class="col-lg-6 d-none d-lg-block form-register-left p-77-42 ">
+                        <div class="col-lg-6 d-lg-block form-register-left p-77-42 ">
                             <div class="row m-0 ">
-                                <div class="col-1 p-0 "><img src="assets/images/home/advise.png " width="40px " height="40px " alt=" "></div>
+                                <div class="col-1 p-0 "><img src="assets/images/home/advise.png " width="40px " height="auto" alt=" " class="mt-2"></div>
                                 <div class="col-11 mt-1 "><span class="font-20 text-white fw-700 ">Chuyên viên tư vấn 1-1, hỗ trợ tận tình</span>
                                     <div class="line-dashed mt-25 "></div>
                                 </div>
                             </div>
                             <div class="row mx-0 mt-24 ">
-                                <div class="col-1 p-0 "><img src="assets/images/home/time.png " width="40px " height="40px " alt=" "></div>
+                                <div class="col-1 p-0 "><img src="assets/images/home/time.png " width="40px " height="auto" alt=" " class="mt-2"></div>
                                 <div class="col-11 mt-1 "><span class="font-20 text-white fw-700 ">Giải quyết khiếu nại nhanh chóng</span>
                                     <div class="line-dashed mt-25 "></div>
                                 </div>
                             </div>
                             <div class="row mx-0 mt-24 ">
-                                <div class="col-1 p-0 "><img src="assets/images/home/advisefree.png " width="40px " height="40px " alt=" "></div>
+                                <div class="col-1 p-0 "><img src="assets/images/home/advisefree.png " width="40px " height="auto " alt=" " class="mt-2"></div>
                                 <div class="col-11 mt-1 "><span class="font-20 text-white fw-700 ">Tư vấn miễn phí sản phẩm, nguồn hàng</span>
                                     <div class="line-dashed mt-25 "></div>
                                 </div>
                             </div>
                             <div class="row mx-0 mt-24 ">
-                                <div class="col-1 p-0 "><img src="assets/images/home/exchangerate.png " width="40px " height="40px " alt=" "></div>
+                                <div class="col-1 p-0 "><img src="assets/images/home/exchangerate.png " width="40px " height="auto " alt=" " class="mt-2"></div>
                                 <div class="col-11 mt-1 "><span class="font-20 text-white fw-700 ">Cập nhật tỉ giá tự động 24/24</span>
                                     <div class="line-dashed mt-25 "></div>
                                 </div>
                             </div>
                             <div class="row mx-0 mt-24 ">
-                                <div class="col-1 p-0 "><img src="assets/images/home/sale.png " width="40px " height="40px " alt=" "></div>
+                                <div class="col-1 p-0 "><img src="assets/images/home/sale.png " width="40px " height="auto " alt=" " class="mt-2"></div>
                                 <div class="col-11 mt-1 "><span class="font-20 text-white fw-700 ">Nhận thông tin khuyến mãi hấp dẫn trên Taobao, Alibaba, 1688…</span>
                                     <div class="line-dashed mt-25 "></div>
                                 </div>
                             </div>
                             <div class="row mx-0 mt-24 ">
-                                <div class="col-1 p-0 "><img src="assets/images/home/fee.png " width="40px " height="40px " alt=" "></div>
+                                <div class="col-1 p-0 "><img src="assets/images/home/fee.png " width="40px " height="auto " alt=" " class="mt-2"></div>
                                 <div class="col-11 mt-1 "><span class="font-20 text-white fw-700 ">Phí dịch vụ thấp nhất thị trường.
 Cọc từ 30%</span>
 
