--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
-<body style="">
+<body>
     <header class="main-header-area border-bottom-dark">
         <div class="header-middle py-10 d-lg-none">
             <div class="">
@@ -888,7 +888,7 @@
                         </div>
                     </div>
                 </div>
-                 <div class="swiper-pagination"></div>
+                <div class="swiper-pagination"></div>
             </div>
 
         </section>
