update UI for register and fix menu-mobile for home

--- a/home.html
+++ b/home.html
@@ -252,8 +252,36 @@
 
                                     </ul>
                                 </li>
+                                <li class="menu-item-has-children">
+                                <div class="pl-45 ">
+                                        <img src="assets/images/icons/ExchangeRateDarkBlue.png" width="18" height="16" alt="">
+                                        <span class="text-darkBlue">Tỷ giá: 1NDT = </span>
+                                        <span class="text-darkBlue">
+                                        3.845Đ
+                                      </span>
+                                    </div>
+                                </li>
+                                <li class="menu-item-has-children">
+                                    <a href="#">
+                                                <img class="mt-negative3" src="assets/images/icons/cartDarkBlue.png" width="18" height="16" alt="">
+                                                <span class="text-uppercase d-inline text-darkBlue ms-1">
+                                                    giỏ hàng
+                                                </span>
+                                     </a>
+                                </li>
+                                 <li class="menu-item-has-children">
+                                    
+                                            <a class="d-inline pe-0" href="#">
+                                                <img class="mt-negative3" src="assets/images/icons/loginDarkBlue.png" width="18" height="18" alt="">
+                                                <span class="text-uppercase d-inline text-darkBlue ms-1">Đăng nhập</span>
+                                            </a>
+                                            <span class="mx-2 d-inline text-darkBlue">|</span>
 
-
+                                            <a class="text-uppercase d-inline px-0 text-darkBlue" href="#">
+                                              đăng ký
+                                       </a>
+                                      
+                                </li>
                             </ul>
                         </nav>
                     </div>
