update app mobile

--- a/app-mobile.html
+++ b/app-mobile.html
@@ -30,102 +30,70 @@
   </head>
 
   <body class="app-mobile">
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    
+    <main>
+      <section
+        class="main-app-mobile py-5 d-flex justify-content-center align-items-lg-center"
+      >
         <div class="container">
           <a class="navbar-brand" href="#"
             ><img src="./assets/images/appmobile/logo.png" alt="" srcset=""
           /></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div
-            class="collapse navbar-collapse justify-content-end"
-            id="navbarNav"
-          >
-            <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link" href="#"
-                  >Home <span class="sr-only">(current)</span></a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-              </li>
-            </ul>
-            <button class="btn btn-primary ms-3">Join us</button>
-          </div>
-        </div>
-      </nav>
-    </header>
-    <main>
-      <section
-        class="main vh-100 d-flex justify-content-center align-items-lg-center"
-      >
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-5 col-12 mx-auto text-center"></div>
-            <div class="col-lg-7 col-12 mx-auto text-center">
-              <h1>Naipot - siêu app đặt mua hàng trung quốc trên điện thoại</h1>
-              <p>
+          <div class="row px-xl-5  mt-xl-5 mt-md-4">
+            <div class="col-md-5 container-left  mt-5 mt-md-0  order-2 order-md-1 col-12 mx-auto text-center">
+              <img src="assets/images/appmobile/phone.png" width="100%" alt="">
+            </div>
+            <div class="col-md-7 mt-5 mt-md-0 container-right order-1 order-md-2 py-xl-5 col-12 mx-auto text-center">
+              <h1 class="font-32-desktop font-20 fw-900 text-darkBlue text-md-start text-center text-uppercase">Naipot - siêu app </br> đặt mua hàng trung quốc </br> trên điện thoại</h1>
+              <p class="font-18-desktop font-14 fw-600 text-darkBlue text-md-start text-center mt-lg-5 mt-md-4 mt-3">
                 Naipot hỗ trợ người kinh doanh nhập hàng xuyên biên giới dễ dàng
                 thông qua ứng dụng trên điện thoại. Nhằm đáp ứng nhu cầu của
                 khách có thể tìm kiếm, tạo đơn, quản lý đơn hàng thuận tiện
                 nhất.
               </p>
-              <h1>tải ứng dụng naipot</h1>
-              <div class="row">
-                <div class="col-4">
-                  <button>
+              <h1 class="font-32-desktop font-20 fw-900 text-darkBlue text-md-start text-center text-uppercase mt-lg-5 mt-md-4 mt-3" >tải ứng dụng naipot</h1>
+              <div class="row mt-xl-5 mt-md-4">
+                <div class="col-xl-5 col-md-6 col-12">
+                  <button class="btn-appstore m-auto d-flex align-items-center justify-content-center">
                     <img
-                      src="./assets/images/appmobile/apple-logo.png"
+                      src="./assets/images/icons/apple-logo.png"
                       alt=""
                       srcset=""
+                      height="100%"
                     />
 
                     <span
-                      >Tải về trên <br />
-                      APP STORE</span
+                      class="text-white text-start ms-2 font-16-desktop font-13">Tải về trên <br/>
+                    <strong> APP STORE</strong> </span
                     >
                   </button>
-                  <button>
+                  <button class=" bg-transparent border-0 mt-4">
                     <img
+                    class="qr-code"
                       src="./assets/images/appmobile/qr.png"
                       alt=""
                       srcset=""
                     />
                   </button>
                 </div>
-                <div class="col-4">
-                  <button>
+                <div class="col-xl-5 col-md-6 col-12 mt-3 mt-md-0">
+                  <button class="btn-chplay m-auto d-flex justify-content-center align-items-center">
                     <img
-                      src="./assets/images/appmobile/android-logo.png"
+                      src="./assets/images/icons/android-logo.png"
                       alt=""
                       srcset=""
+                      
                     />
 
                     <span
-                      >Tải về trên <br />
-                      CH PLAY</span
+                      class="text-white text-start ms-2 font-16-desktop font-13" >Tải về trên <br />
+                    <strong>  CH PLAY</strong></span
                     >
                   </button>
 
-                  <button>
+                  <button class=" bg-transparent  border-0 mt-4">
                     <img
+                      class="qr-code"
                       src="./assets/images/appmobile/qr.png"
                       alt=""
                       srcset=""
