update UI for fee and add link for button download app in footer

--- a/home.html
+++ b/home.html
@@ -469,11 +469,11 @@
                     <div class="homeBanner-subTitle text-center">
                         <span class="text-capitalize font-48-desktop font-32 text-lightBlue fw-900 "> qua naipot?</span>
                     </div>
-                    <div class="homeBanner-btn-signup text-center mx-auto">
-                        <span class="text-uppercase fw-800 font-18 text-white">
+                    <div class="text-center"><button class="homeBanner-btn-signup border-0 text-center mx-auto">
+                       <a href="#register"> <span class="text-uppercase fw-800 font-18 text-white">
                               đăng ký ngay
-                        </span>
-                    </div>
+                        </span></a>
+                    </button></div>
                     <div class="container position-absolute">
                         <div class="homeBanner-shipping-info  row mx-0 mt-86">
                             <div class="col-4 px-1">
@@ -544,21 +544,21 @@
                             </h2>
                             <div class="row justify-content-between mt-34-desktop mt-3 align-items-center">
                                 <div class="col-12 col-lg-6">
-                                    <div class='d-flex align-items-center justify-content-center install-web m-auto '>
-                                        <img src="assets/images/icons/chrome.png" width="36" height="36" alt="">
+                                    <div class=' install-web m-auto '>
+                                       <a href="#" class="d-flex align-items-center justify-content-center"> <img src="assets/images/icons/chrome.png" width="36" height="36" alt="">
                                         <div class='ml-8'>
                                             <span class="text-white font-14">Tải về cho</span>
                                             <p class="text-uppercase text-white font-lg-16 font-14 fw-700 m-0">google chrome</p>
-                                        </div>
+                                        </div></a>
                                     </div>
                                 </div>
                                 <div class="col-12 col-lg-6 mt-3 mt-lg-0">
-                                    <div class=' d-flex align-items-center justify-content-center install-web m-auto'>
-                                        <img src=" assets/images/icons/coccoc.png " width="36 " height="36 " alt=" ">
+                                    <div class='  install-web m-auto'>
+                                       <a href="#" class="d-flex align-items-center justify-content-center"> <img src=" assets/images/icons/coccoc.png " width="36 " height="36 " alt=" ">
                                         <div class='ml-8'>
                                             <span class="text-white font-14 ">Tải về cho</span>
                                             <p class="text-uppercase font-lg-16 font-14 fw-700 text-white m-0 ">coccoc</p>
-                                        </div>
+                                        </div></a>
                                     </div>
                                 </div>
 
@@ -571,21 +571,21 @@
                             </h2>
                             <div class="row justify-content-between mt-34 align-items-center ">
                                 <div class="col-12 col-lg-6">
-                                    <div class=' d-flex m-auto align-items-center download-app justify-content-center'>
-                                        <img src="assets/images/icons/apple-logo.png " width="36 " height="36 " alt=" ">
+                                    <div class='  m-auto download-app '>
+                                       <a href="#" class="d-flex align-items-center justify-content-center"> <img src="assets/images/icons/apple-logo.png " width="36 " height="36 " alt=" ">
                                         <div class='ml-8'>
                                             <span class="text-white font-14 ">Tải về trên</span>
                                             <p class="text-uppercase font-lg-16 font-14 fw-700 text-white m-0 ">App Store </p>
-                                        </div>
+                                        </div></a>
                                     </div>
                                 </div>
                                 <div class="col-12 mt-3 mt-lg-0 col-lg-6">
-                                    <div class='d-flex m-auto align-items-center download-app justify-content-center'>
-                                        <img src="assets/images/icons/android-logo.png " width="36 " height="36 " alt=" ">
+                                    <div class=' m-auto  download-app '>
+                                       <a href="#" class="d-flex align-items-center justify-content-center"> <img src="assets/images/icons/android-logo.png " width="36 " height="36 " alt=" ">
                                         <div class='ml-8'>
                                             <span class="text-white font-14 ">Tải về trên</span>
                                             <p class="text-uppercase font-lg-16 font-14 fw-700 text-white m-0 ">google play</p>
-                                        </div>
+                                        </div></a>
                                     </div>
                                 </div>
                             </div>
@@ -1108,7 +1108,7 @@
                 </div>
             </div>
         </section>
-        <section class="register py-64 pb-lg-5 pb-0 ">
+        <section id="register" class="register py-64 pb-lg-5 pb-0 ">
             <div class="container ">
                 <div class=" register-header ">
                     <div class="partners-header-title ">
@@ -1202,7 +1202,7 @@ Cọc từ 30%</span>
                                 </form>
                             </div>
                             <div class="text-center mt-36 ">
-                                <button class="btn-register text-white font-18 text-center text-uppercase border-0 ">
+                                <button class="btn-register  text-white font-18 text-center text-uppercase border-0 ">
                                     đăng ký ngay
                                 </button>
                             </div>
@@ -1261,11 +1261,11 @@ Cọc từ 30%</span>
                         <ul>
                             <li><a href="# ">Hướng dẫn tạo tài khoản</a></li>
                             <li>
-                                <a href="# "></a>Hướng dẫn nhập hàng</li>
+                                <a href="# ">Hướng dẫn nhập hàng</a></li>
                             <li>
-                                <a href="# "></a>Hướng dẫn đặt hàng qua app</li>
+                                <a href="# ">Hướng dẫn đặt hàng qua app</a></li>
                             <li>
-                                <a href="# "></a>Câu hỏi thường gặp</li>
+                                <a href="# ">Câu hỏi thường gặ</a>p</li>
                         </ul>
                     </div>
                     <div class="info col-lg-3 mt-4 mt-lg-0 col-12">
@@ -1278,19 +1278,19 @@ Cọc từ 30%</span>
                         <div>
                             <p>Tải ứng dụng NAIPOT cho mobile</p>
                             <div>
-                                <div class=' d-flex align-items-center download-app justify-content-center'>
-                                    <img src="assets/images/icons/apple-logo.png " width="36 " height="36 " alt=" ">
+                                <div class=' download-app '>
+                                   <a href="#" class=" d-flex align-items-center justify-content-center"> <img src="assets/images/icons/apple-logo.png " width="36 " height="36 " alt=" ">
                                     <div class='ml-8'>
                                         <span class="text-white font-14 ">Tải về trên</span>
                                         <p class="text-uppercase font-16 fw-700 text-white m-0 ">App Store </p>
-                                    </div>
+                                    </div></a>
                                 </div>
-                                <div class=' d-flex align-items-center download-app justify-content-center mt-25'>
-                                    <img src="assets/images/icons/android-logo.png " width="36 " height="36 " alt=" ">
+                                <div class=' download-app  mt-25'>
+                                    <a href="#" class=" d-flex align-items-center justify-content-center"   ><img src="assets/images/icons/android-logo.png " width="36 " height="36 " alt=" ">
                                     <div class='ml-8'>
                                         <span class="text-white font-14 ">Tải về trên</span>
                                         <p class="text-uppercase font-16 fw-700 text-white m-0 ">google play</p>
-                                    </div>
+                                    </div></a>
                                 </div>
                             </div>
                         </div>
