--- a/introduce-detail.html
+++ b/introduce-detail.html
@@ -440,7 +440,7 @@
                 <div class="ms-2"><img src="assets/images/icons/arrow-single-right.png" alt=""></div>
             <a class="text-title ms-2" href="#">
                 Hướng dẫn
-            </a>
+            </a>    
            </div>
         </div>
         <div class="introduce-detail-content py-5">
@@ -506,11 +506,12 @@
                         <ul>
                             <li><a href="# ">Hướng dẫn tạo tài khoản</a></li>
                             <li>
-                                <a href="# "></a>Hướng dẫn nhập hàng</li>
+                                <a href="# ">Hướng dẫn nhập hàng</a></li>
                             <li>
-                                <a href="# "></a>Hướng dẫn đặt hàng qua app</li>
+                                <a href="# ">Hướng dẫn đặt hàng qua app</a></li>
                             <li>
-                                <a href="# "></a>Câu hỏi thường gặp</li>
+                                <a href="# ">Câu hỏi thường gặ</a>p</li>
+                        </ul> <a href="# "></a>Câu hỏi thường gặp</li>
                         </ul>
                     </div>
                     <div class="info col-lg-3 mt-4 mt-lg-0 col-12">
@@ -523,19 +524,19 @@
                         <div>
                             <p>Tải ứng dụng NAIPOT cho mobile</p>
                             <div>
-                                <div class=' d-flex align-items-center download-app justify-content-center'>
-                                    <img src="assets/images/icons/apple-logo.png " width="36 " height="36 " alt=" ">
+                                <div class=' download-app '>
+                                   <a href="#" class=" d-flex align-items-center justify-content-center"> <img src="assets/images/icons/apple-logo.png " width="36 " height="36 " alt=" ">
                                     <div class='ml-8'>
-                                        <span class="text-white font-14-desktop font-12 ">Tải về trên</span>
-                                        <p class="text-uppercase font-16-desktop font-14 fw-700 text-white m-0 ">App Store </p>
-                                    </div>
+                                        <span class="text-white font-14 ">Tải về trên</span>
+                                        <p class="text-uppercase font-16 fw-700 text-white m-0 ">App Store </p>
+                                    </div></a>
                                 </div>
-                                <div class=' d-flex align-items-center download-app justify-content-center mt-25'>
-                                    <img src="assets/images/icons/android-logo.png " width="36 " height="36 " alt=" ">
+                                <div class=' download-app  mt-25'>
+                                    <a href="#" class=" d-flex align-items-center justify-content-center"   ><img src="assets/images/icons/android-logo.png " width="36 " height="36 " alt=" ">
                                     <div class='ml-8'>
-                                        <span class="text-white font-14-desktop font-12 ">Tải về trên</span>
-                                        <p class="text-uppercase font-16-desktop font-14 fw-700 text-white m-0 ">google play</p>
-                                    </div>
+                                        <span class="text-white font-14 ">Tải về trên</span>
+                                        <p class="text-uppercase font-16 fw-700 text-white m-0 ">google play</p>
+                                    </div></a>
                                 </div>
                             </div>
                         </div>
