--- a/question.html
+++ b/question.html
@@ -556,11 +556,11 @@
                         <ul>
                             <li><a href="# ">Hướng dẫn tạo tài khoản</a></li>
                             <li>
-                                <a href="# "></a>Hướng dẫn nhập hàng</li>
+                                <a href="# ">Hướng dẫn nhập hàng</a></li>
                             <li>
-                                <a href="# "></a>Hướng dẫn đặt hàng qua app</li>
+                                <a href="# ">Hướng dẫn đặt hàng qua app</a></li>
                             <li>
-                                <a href="# "></a>Câu hỏi thường gặp</li>
+                                <a href="# ">Câu hỏi thường gặ</a>p</li>
                         </ul>
                     </div>
                     <div class="info col-lg-3 mt-4 mt-lg-0 col-12">
@@ -573,19 +573,19 @@
                         <div>
                             <p>Tải ứng dụng NAIPOT cho mobile</p>
                             <div>
-                                <div class=' d-flex align-items-center download-app justify-content-center'>
-                                    <img src="assets/images/icons/apple-logo.png " width="36 " height="36 " alt=" ">
+                                <div class=' download-app '>
+                                   <a href="#" class=" d-flex align-items-center justify-content-center"> <img src="assets/images/icons/apple-logo.png " width="36 " height="36 " alt=" ">
                                     <div class='ml-8'>
                                         <span class="text-white font-14 ">Tải về trên</span>
                                         <p class="text-uppercase font-16 fw-700 text-white m-0 ">App Store </p>
-                                    </div>
+                                    </div></a>
                                 </div>
-                                <div class=' d-flex align-items-center download-app justify-content-center mt-25'>
-                                    <img src="assets/images/icons/android-logo.png " width="36 " height="36 " alt=" ">
+                                <div class=' download-app  mt-25'>
+                                    <a href="#" class=" d-flex align-items-center justify-content-center"   ><img src="assets/images/icons/android-logo.png " width="36 " height="36 " alt=" ">
                                     <div class='ml-8'>
                                         <span class="text-white font-14 ">Tải về trên</span>
                                         <p class="text-uppercase font-16 fw-700 text-white m-0 ">google play</p>
-                                    </div>
+                                    </div></a>
                                 </div>
                             </div>
                         </div>
